basic level1-4 修正

--- a/public/progrative/basic/level1-4/index.html
+++ b/public/progrative/basic/level1-4/index.html
@@ -79,7 +79,7 @@
       <!-- VISUAL -->
       <div
         id="visual"
-        class="px-0 md:px-[21px] lg:px-14 mt-[75px] mb-[64px] md:mb-0"
+        class="px-0 md:px-[21px] lg:px-14 pt-[75px] mb-[64px] md:mb-0 overflow-x-hidden max-w-[1440px] mx-auto"
       >
         <div class="relative">
           <!-- 背景画像 -->
