fix advanced level 2

--- a/public/progrative/advanced/level2/index.html
+++ b/public/progrative/advanced/level2/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="main__triangle"><img src="./assets/images/triangle.svg" alt="ボタン" /></div>
               </div>
-              <div class="main__listDesc">服を脱ぎ、汚れ（メイク等）を落とします。</div>
+              <div class="main__descBlock"><div class="main__listDesc">服を脱ぎ、汚れ（メイク等）を落とします。</div></div>
             </div>
             <!--  -->
             <div class="main__list">
@@ -56,7 +56,7 @@
                 </div>
                 <div class="main__triangle"><img src="./assets/images/triangle.svg" alt="ボタン" /></div>
               </div>
-              <div class="main__listDesc">香りに包まれ、リラックスします。</div>
+              <div class="main__descBlock"><div class="main__listDesc">香りに包まれ、リラックスします。</div></div>
             </div>
             <!--  -->
             <div class="main__list">
@@ -67,7 +67,7 @@
                 </div>
                 <div class="main__triangle"><img src="./assets/images/triangle.svg" alt="ボタン" /></div>
               </div>
-              <div class="main__listDesc">更衣室での携帯電話の使用はご遠慮ください。</div>
+              <div class="main__descBlock"><div class="main__listDesc">更衣室での携帯電話の使用はご遠慮ください。</div></div>
             </div>
             <!--  -->
             <div class="main__list">
@@ -78,7 +78,7 @@
                 </div>
                 <div class="main__triangle"><img src="./assets/images/triangle.svg" alt="ボタン" /></div>
               </div>
-              <div class="main__listDesc">座る前に石鹸でスツールを洗ってください。</div>
+              <div class="main__descBlock"><div class="main__listDesc">座る前に石鹸でスツールを洗ってください。</div></div>
             </div>
             <!--  -->
             <div class="main__list">
@@ -89,7 +89,7 @@
                 </div>
                 <div class="main__triangle"><img src="./assets/images/triangle.svg" alt="ボタン" /></div>
               </div>
-              <div class="main__listDesc">気分が良くなったら、喜びを表現してください（静かにしてください）。</div>
+              <div class="main__descBlock"><div class="main__listDesc">気分が良くなったら、喜びを表現してください（静かにしてください）。</div></div>
             </div>
           </div>
 
@@ -103,7 +103,7 @@
                 </div>
                 <div class="main__triangle"><img src="./assets/images/triangle.svg" alt="ボタン" /></div>
               </div>
-              <div class="main__listDesc">髪を結ぶことを忘れないでください。</div>
+              <div class="main__descBlock"><div class="main__listDesc">髪を結ぶことを忘れないでください。</div></div>
             </div>
             <!--  -->
             <div class="main__list">
@@ -114,7 +114,7 @@
                 </div>
                 <div class="main__triangle"><img src="./assets/images/triangle.svg" alt="ボタン" /></div>
               </div>
-              <div class="main__listDesc">ロッカーの鍵は常に目を光らせ、なくさないようにしてください。</div>
+              <div class="main__descBlock"><div class="main__listDesc">ロッカーの鍵は常に目を光らせ、なくさないようにしてください。</div></div>
             </div>
             <!--  -->
             <div class="main__list">
@@ -125,7 +125,7 @@
                 </div>
                 <div class="main__triangle"><img src="./assets/images/triangle.svg" alt="ボタン" /></div>
               </div>
-              <div class="main__listDesc">浸かる前に必ず体を清めてください。</div>
+              <div class="main__descBlock"><div class="main__listDesc">浸かる前に必ず体を清めてください。</div></div>
             </div>
             <!--  -->
             <div class="main__list">
@@ -136,7 +136,7 @@
                 </div>
                 <div class="main__triangle"><img src="./assets/images/triangle.svg" alt="ボタン" /></div>
               </div>
-              <div class="main__listDesc">潤いを逃さないでください。</div>
+              <div class="main__descBlock"><div class="main__listDesc">潤いを逃さないでください。</div></div>
             </div>
             <!--  -->
             <div class="main__list">
@@ -147,7 +147,7 @@
                 </div>
                 <div class="main__triangle"><img src="./assets/images/triangle.svg" alt="ボタン" /></div>
               </div>
-              <div class="main__listDesc">否定性と緊張から解放されます。</div>
+              <div class="main__descBlock"><div class="main__listDesc">否定性と緊張から解放されます。</div></div>
             </div>
           </div>
         </div>
