fix advanced level 2

--- a/public/progrative/advanced/level2/index.html
+++ b/public/progrative/advanced/level2/index.html
@@ -35,7 +35,7 @@
         <h1>10 BATHHOUSE RULES</h1>
 
         <div class="main__lists">
-          <div class="main_flex">
+          <div class="main__flex">
             <!--  -->
             <div class="main__list">
               <div class="main__listHeader actionOpen">
@@ -93,7 +93,7 @@
             </div>
           </div>
 
-          <div class="main_flex">
+          <div class="main__flex">
             <!--  -->
             <div class="main__list">
               <div class="main__listHeader actionOpen">
